# SearchModel

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  pyproject.toml
configs/: settings.py
docker_compose/: app.yaml
notebooks/: collect.ipynb  preprocessing.ipynb
repositories/page_texts/: ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4006633.html.txt  ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4006805.html.txt  ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4007152.html.txt  ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4007361.html.txt  ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4007418.html.txt  ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4007518.html.txt  ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4007801.html.txt  ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4007812.html.txt  ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4007866.html.txt  ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4007918.html.txt  ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4008017.html.txt  ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4008070.html.txt  ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4008074.html.txt  ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4008081.html.txt  ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4008121.html.txt  ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4008164.html.txt  ..+repositories+raw_pages+www.kinopoisk.ru+media+article+4008199.html.txt  (+379 more)
src/: app.py
(+396 files in other folders)
